--- a/Challenges_Alura_DS_FirstsSteps.ipynb
+++ b/Challenges_Alura_DS_FirstsSteps.ipynb
@@ -2196,7 +2196,7 @@
         },
         "outputId": "f82746b7-c730-471b-c75b-dd8eef5f9519"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2282,7 +2282,7 @@
         "id": "1BRFQiitvgx7",
         "outputId": "8d649855-490a-4f33-95a9-ca478fe38ac9"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2357,7 +2357,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "expenses = [2172.54, 3701.35, 3518.09, 3456.61, 3249.38, 2840.82, 3891.45, 3075.26, 2317.64, 3219.08]\n",
+        "\n",
+        "average = sum(expenses) / len(expenses)\n",
+        "\n",
+        "print(f\"The average of the expenses is: ${average}\")"
+      ],
       "metadata": {
         "id": "ge3LuFhLMgeD"
       },
@@ -2376,12 +2382,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "expenses = [2172.54, 3701.35, 3518.09, 3456.61, 3249.38, 2840.82, 3891.45, 3075.26, 2317.64, 3219.08]\n",
+        "higher_than_3000 = 0\n",
+        "\n",
+        "for i in expenses:\n",
+        "  if i > 3000:\n",
+        "     higher_than_3000 += 1\n",
+        "\n",
+        "percentage = (higher_than_3000 / len(expenses)) * 100\n",
+        "\n",
+        "print(f\"The total expenses greater than 3000 was: {higher_than_3000}\")\n",
+        "print(f\"The percentage of the total expenses greater than 3000 was: {percentage}\")\n"
+      ],
       "metadata": {
-        "id": "Ygu5TMZyMgeD"
+        "id": "Ygu5TMZyMgeD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "29fcdd0b-c77f-4b46-c931-ff7502a4e4ee"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The total expenses greater than 3000 was: 7\n",
+            "The percentage of the total expenses greater than 3000 was: 70.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2395,12 +2426,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "list = []\n",
+        "items = 0\n",
+        "\n",
+        "while items <= 4:\n",
+        "  integer_number = int(input(\"Enter a number: \"))\n",
+        "  items += 1\n",
+        "  list.append(integer_number)\n",
+        "\n",
+        "print(list)"
+      ],
       "metadata": {
-        "id": "vtM9O1hLMgeD"
+        "id": "vtM9O1hLMgeD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f612e7d-ffce-4772-ee67-ccac34c1f249"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 1\n",
+            "Enter a number: 2\n",
+            "Enter a number: 3\n",
+            "Enter a number: 4\n",
+            "Enter a number: 5\n",
+            "[1, 2, 3, 4, 5]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2414,12 +2472,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "list = []\n",
+        "items = 0\n",
+        "\n",
+        "while items <= 4:\n",
+        "  integer_number = int(input(\"Enter a number: \"))\n",
+        "  items += 1\n",
+        "  list.append(integer_number)\n",
+        "\n",
+        "list.reverse()\n",
+        "print(list)"
+      ],
       "metadata": {
-        "id": "-CGwMIyHMgeD"
+        "id": "-CGwMIyHMgeD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "890d810b-3a6d-4cb8-b464-528b0b1b56a3"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 1\n",
+            "Enter a number: 2\n",
+            "Enter a number: 3\n",
+            "Enter a number: 4\n",
+            "Enter a number: 5\n",
+            "[5, 4, 3, 2, 1]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2433,12 +2519,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "list = []\n",
+        "number = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "for i in range(2, number + 1):\n",
+        "    is_prime = True\n",
+        "\n",
+        "    for j in range(2, int(i**0.5) + 1):\n",
+        "        if i % j == 0:\n",
+        "            is_prime = False\n",
+        "            break\n",
+        "\n",
+        "    if is_prime:\n",
+        "        list.append(i)\n",
+        "\n",
+        "print(list)"
+      ],
       "metadata": {
-        "id": "rj_6GHstMgeE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y6uUopQ2CR49",
+        "outputId": "87062496-a3ed-4a7f-ffe3-3005cb502a21"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 17\n",
+            "[2, 3, 5, 7, 11, 13, 17]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2452,12 +2567,95 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "day = int(input(\"Enter a day: \"))\n",
+        "month = str(input(\"Enter a month: \")).lower()\n",
+        "year = int(input(\"Enter a year: \"))\n",
+        "\n",
+        "date = [day, month, year]\n",
+        "\n",
+        "if year % 4 == 0:\n",
+        "\n",
+        "  if month == \"february\":\n",
+        "\n",
+        "    if day > 28 or day < 0:\n",
+        "      print(\"Enter a valid day.\")\n",
+        "      day = int(input(\"Enter a day: \"))\n",
+        "      date[0] = day\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "    else:\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "\n",
+        "  elif month == \"january\" or month == \"march\" or month == \"may\" or month == \"july\" or month == \"august\" or month == \"october\" or month == \"december\":\n",
+        "    if day > 31 or day < 0:\n",
+        "      print(\"Enter a valid day.\")\n",
+        "      day = int(input(\"Enter a day: \"))\n",
+        "      date[0] = day\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "    else:\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "\n",
+        "  else:\n",
+        "    if day > 30 or day < 0:\n",
+        "      print(\"Enter a valid day.\")\n",
+        "      day = int(input(\"Enter a day: \"))\n",
+        "      date[0] = day\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "    else:\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "\n",
+        "else:\n",
+        "\n",
+        "  if month == \"february\":\n",
+        "\n",
+        "    if day > 29 or day < 0:\n",
+        "      print(\"Enter a valid day.\")\n",
+        "      day = int(input(\"Enter a day: \"))\n",
+        "      date[0] = day\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "    else:\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "\n",
+        "  elif month == \"january\" or month == \"march\" or month == \"may\" or month == \"july\" or month == \"august\" or month == \"october\" or month == \"december\":\n",
+        "    if day > 31 or day < 0:\n",
+        "      print(\"Enter a valid day.\")\n",
+        "      day = int(input(\"Enter a day: \"))\n",
+        "      date[0] = day\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "    else:\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "\n",
+        "  else:\n",
+        "    if day > 30 or day < 0:\n",
+        "      print(\"Enter a valid day.\")\n",
+        "      day = int(input(\"Enter a day: \"))\n",
+        "      date[0] = day\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])\n",
+        "    else:\n",
+        "      print(date[0], \"/\", date[1], \"/\", date[2])"
+      ],
       "metadata": {
-        "id": "0eYA8UjTMgeE"
+        "id": "0eYA8UjTMgeE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "443a74dc-bfb5-4784-e7ef-53659adf2d91"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a day: 32\n",
+            "Enter a month: january\n",
+            "Enter a year: 2015\n",
+            "Enter a valid day.\n",
+            "Enter a day: 31\n",
+            "31 / january / 2015\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2480,12 +2678,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "bacterias_list = [1.2, 2.1, 3.3, 5.0, 7.8, 11.3, 16.6, 25.1, 37.8, 56.9]\n",
+        "growth_percentage_list = []\n",
+        "\n",
+        "for i in range(1, len(bacterias_list)):\n",
+        "  growth_percentage = (bacterias_list[i] - (bacterias_list[i - 1])) * 100 / (bacterias_list[i - 1])\n",
+        "  growth_percentage_list.append(round(growth_percentage, 2))\n",
+        "\n",
+        "print(growth_percentage_list)"
+      ],
       "metadata": {
-        "id": "PXNO_CFkMgeE"
+        "id": "PXNO_CFkMgeE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d0637d6-9ee4-4f06-d4e8-7376bf61ccb6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[75.0, 57.14, 51.52, 56.0, 44.87, 46.9, 51.2, 50.6, 50.53]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2499,12 +2718,51 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "total_ids = 0\n",
+        "even_ids = 0\n",
+        "odd_ids = 0\n",
+        "\n",
+        "while total_ids <= 9:\n",
+        "  ids = int(input(\"Enter the product ID: \"))\n",
+        "  total_ids += 1\n",
+        "\n",
+        "  if ids % 2 == 0:\n",
+        "    even_ids += 1\n",
+        "  else:\n",
+        "    odd_ids += 1\n",
+        "\n",
+        "print(f\"There are {even_ids} sweet products.\")\n",
+        "print(f\"There are {odd_ids} bitter products.\")"
+      ],
       "metadata": {
-        "id": "WqjO2SZkMgeE"
+        "id": "WqjO2SZkMgeE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c78cd0e-dd90-49e6-938e-aaaa4acfa977"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the product ID: 123456\n",
+            "Enter the product ID: 65432\n",
+            "Enter the product ID: 37265\n",
+            "Enter the product ID: 234234\n",
+            "Enter the product ID: 35234\n",
+            "Enter the product ID: 45345\n",
+            "Enter the product ID: 23434\n",
+            "Enter the product ID: 656534\n",
+            "Enter the product ID: 234143\n",
+            "Enter the product ID: 4564523\n",
+            "There are 6 sweet products.\n",
+            "There are 4 bitter products.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2531,12 +2789,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "template = [\"D\", \"A\", \"C\", \"B\", \"A\", \"D\", \"C\", \"C\", \"A\", \"B\"]\n",
+        "answers = []\n",
+        "\n",
+        "for i in range(len(template)):\n",
+        "  answer = str(input(f\"Enter yout answer for the problem: \"))\n",
+        "  answers.append(answer)\n",
+        "\n",
+        "correct = 0\n",
+        "wrong = 0\n",
+        "\n",
+        "for i in range(len(template)):\n",
+        "  if answers[i] == template[i]:\n",
+        "    correct += 1\n",
+        "  else:\n",
+        "    wrong += 1\n",
+        "\n",
+        "print(f\"The student scored {correct} points.\")"
+      ],
       "metadata": {
-        "id": "ytIQDJrQMgeE"
+        "id": "ytIQDJrQMgeE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ea557aa1-3d3b-49eb-e380-d1edfad2e9d0"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter yout answer for the problem: A\n",
+            "Enter yout answer for the problem: A\n",
+            "Enter yout answer for the problem: A\n",
+            "Enter yout answer for the problem: A\n",
+            "Enter yout answer for the problem: A\n",
+            "Enter yout answer for the problem: A\n",
+            "Enter yout answer for the problem: A\n",
+            "Enter yout answer for the problem: A\n",
+            "Enter yout answer for the problem: A\n",
+            "Enter yout answer for the problem: A\n",
+            "The student scored 3 points.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2550,12 +2848,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "months = [\"January\", \"February\", \"March\", \"April\", \"May\", \"June\", \"July\", \"August\", \"September\", \"October\", \"November\", \"December\"]\n",
+        "temperatures = []\n",
+        "\n",
+        "for month in months:\n",
+        "  temperature = float(input(f\"Enter the average temperature for {month}: \"))\n",
+        "  temperatures.append(temperature)\n",
+        "\n",
+        "average_temp = sum(temperatures) / len(temperatures)\n",
+        "print(\"\\nTemperatures above the annual average:\")\n",
+        "\n",
+        "for i in range(len(temperatures)):\n",
+        "  if temperatures[i] > average_temp:\n",
+        "    print(f\"{months[i]}: {temperatures[i]}°C\")"
+      ],
       "metadata": {
-        "id": "ftj04s2uMgeF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AjeaWD00rAL0",
+        "outputId": "ee3243e7-405e-403d-dd23-86a3eb7d1af0"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the average temperature for January: 123\n",
+            "Enter the average temperature for February: 32\n",
+            "Enter the average temperature for March: 234\n",
+            "Enter the average temperature for April: 62\n",
+            "Enter the average temperature for May: 75\n",
+            "Enter the average temperature for June: 45\n",
+            "Enter the average temperature for July: 86\n",
+            "Enter the average temperature for August: 92\n",
+            "Enter the average temperature for September: 12\n",
+            "Enter the average temperature for October: 133\n",
+            "Enter the average temperature for November: 234\n",
+            "Enter the average temperature for December: 235\n",
+            "\n",
+            "Temperatures above the annual average:\n",
+            "January: 123.0°C\n",
+            "March: 234.0°C\n",
+            "October: 133.0°C\n",
+            "November: 234.0°C\n",
+            "December: 235.0°C\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2574,12 +2916,60 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "products = {'Produto A': 300, 'Produto B': 80, 'Produto C': 60, 'Produto D': 200, 'Produto E': 250, 'Produto F': 30}\n",
+        "total_sold = sum(products.values())\n",
+        "best_seller = max(products, key=products.get)\n",
+        "\n",
+        "print(f\"The total sold was {total_sold} and the best seller was {best_seller}.\")"
+      ],
       "metadata": {
-        "id": "Xa3DJLtFMgeF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PYYkM_QdyPS1",
+        "outputId": "6b7b2ae2-db87-4e80-e1d7-4228e5692875"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The total sold was 920 and the best seller was Produto A.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales = {'Produto A': 300, 'Produto B': 80, 'Produto C': 60,\n",
+        "         'Produto D': 200, 'Produto E': 250, 'Produto F': 30}\n",
+        "\n",
+        "list_total_sold = sales.values()\n",
+        "total_sold = sum(list_total_sold)\n",
+        "best_seller_amount = max(list_total_sold)\n",
+        "\n",
+        "print(f\"The total sold was {total_sold} and the best seller was {best_seller}.\")"
+      ],
+      "metadata": {
+        "id": "Xa3DJLtFMgeF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "35fc9ff0-f817-4f1e-fc92-4ab07af9bea2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The total sold was 920 and the best seller was 300.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
