--- a/Challenges_Alura_DS_FirstsSteps.ipynb
+++ b/Challenges_Alura_DS_FirstsSteps.ipynb
@@ -2942,36 +2942,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "sales = {'Produto A': 300, 'Produto B': 80, 'Produto C': 60,\n",
-        "         'Produto D': 200, 'Produto E': 250, 'Produto F': 30}\n",
-        "\n",
-        "list_total_sold = sales.values()\n",
-        "total_sold = sum(list_total_sold)\n",
-        "best_seller_amount = max(list_total_sold)\n",
-        "\n",
-        "print(f\"The total sold was {total_sold} and the best seller was {best_seller}.\")"
-      ],
-      "metadata": {
-        "id": "Xa3DJLtFMgeF",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "35fc9ff0-f817-4f1e-fc92-4ab07af9bea2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The total sold was 920 and the best seller was 300.\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "#### Questão 12\n",
@@ -2994,12 +2964,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dict = {\"Design 1\": 1334,\n",
+        "\"Design 2\": 982,\n",
+        "\"Design 3\": 1751,\n",
+        "\"Design 4\": 210,\n",
+        "\"Design 5\": 1811}\n",
+        "\n",
+        "total_votes = sum(dict.values())\n",
+        "top_voted = max(dict, key=dict.get)\n",
+        "percentage = (dict[top_voted] / total_votes) * 100\n",
+        "\n",
+        "print(f\"The winner was {top_voted} with {percentage:.2f}% of the votes.\")"
+      ],
       "metadata": {
-        "id": "MRPcGR-_MgeF"
+        "id": "MRPcGR-_MgeF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "debc4b90-967d-4515-893c-877aebdc8874"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The winner was Design 5 with 29.75% of the votes.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3013,12 +3007,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "salaries = [1172, 1644, 2617, 5130, 5532, 6342, 6650, 7238, 7638, 7685, 7782, 7903]\n",
+        "discount = []\n",
+        "\n",
+        "for i in range(len(salaries)):\n",
+        "  if salaries[i] * 0.1 < 200:\n",
+        "    discount.append(200)\n",
+        "  else:\n",
+        "    discount.append(salaries[i] * 0.1)\n",
+        "\n",
+        "total_discount = sum(discount)\n",
+        "employees_with_min_discount = discount.count(200)\n",
+        "max_discount = max(discount)\n",
+        "\n",
+        "dict = {}\n",
+        "\n",
+        "for i in range(len(salaries)):\n",
+        "  dict[salaries[i]] = discount[i]\n",
+        "\n",
+        "print(dict)\n",
+        "print(f\"The total given discount was: {total_discount:.2f}\")\n",
+        "print(f\"The maximum discount given was: {max_discount:.2f}\")\n",
+        "print(f\"The total of employees with min discount was: {employees_with_min_discount}\")"
+      ],
       "metadata": {
-        "id": "QsDSCua42bLB"
+        "id": "QsDSCua42bLB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aac64998-efee-4eaf-f6a5-c15c2859cb20"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1172: 200, 1644: 200, 2617: 261.7, 5130: 513.0, 5532: 553.2, 6342: 634.2, 6650: 665.0, 7238: 723.8000000000001, 7638: 763.8000000000001, 7685: 768.5, 7782: 778.2, 7903: 790.3000000000001}\n",
+            "The total given discount was: 6851.70\n",
+            "The maximum discount given was: 790.30\n",
+            "The total of employees with min discount was: 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3040,12 +3072,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dict = {'Área Norte': [2819, 7236],\n",
+        " 'Área Leste': [1440, 9492],\n",
+        " 'Área Sul': [5969, 74]}\n",
+        "\n",
+        "total_species = []\n",
+        "areas = []\n",
+        "\n",
+        "for i in dict:\n",
+        "  total_species.append(sum(dict[i]))\n",
+        "  areas.append(i)\n",
+        "\n",
+        "for i in range(len(dict)):\n",
+        "  print(f\"{areas[i]}: {total_species[i]}\")\n",
+        "\n",
+        "average = sum(total_species) / len(total_species)\n",
+        "print(f\"The mean of species per area is: {average}\")\n",
+        "print(f\"The area with the highest diversity is: {areas[total_species.index(max(total_species))]}\")"
+      ],
       "metadata": {
-        "id": "eQnOUDfYMlWy"
+        "id": "eQnOUDfYMlWy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "187ff957-b669-4b71-9f64-ad7755ba49cc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Área Norte: 10055\n",
+            "Área Leste: 10932\n",
+            "Área Sul: 6043\n",
+            "The mean of species per area is: 9010.0\n",
+            "The area with the highest diversity is: Área Leste\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3066,12 +3132,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "sectors = {\n",
+        "    'Sector A': [22, 26, 30, 30, 35, 38, 40, 56, 57, 65],\n",
+        "    'Sector B': [22, 24, 26, 33, 41, 49, 50, 54, 60, 64],\n",
+        "    'Sector C': [23, 26, 26, 29, 34, 35, 36, 41, 52, 56],\n",
+        "    'Sector D': [19, 20, 25, 27, 34, 39, 42, 44, 50, 65]\n",
+        "}\n",
+        "\n",
+        "for sector, ages in sectors.items():\n",
+        "    sector_average = sum(ages) / len(ages)\n",
+        "    print(f\"Average age of {sector}: {sector_average}\")\n",
+        "\n",
+        "all_ages = []\n",
+        "for ages in sectors.values():\n",
+        "    all_ages.extend(ages)\n",
+        "overall_average = sum(all_ages) / len(all_ages)\n",
+        "print(f\"\\nOverall average age: {overall_average}\")\n",
+        "\n",
+        "above_average = 0\n",
+        "for age in all_ages:\n",
+        "    if age > overall_average:\n",
+        "        above_average += 1\n",
+        "print(f\"Number of people above the overall average age: {above_average}\")"
+      ],
       "metadata": {
-        "id": "wCiwyKP3MmTz"
+        "id": "wCiwyKP3MmTz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41749248-1a56-4419-bb6d-b4242e0f1ca4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average age of Sector A: 39.9\n",
+            "Average age of Sector B: 42.3\n",
+            "Average age of Sector C: 35.8\n",
+            "Average age of Sector D: 36.5\n",
+            "\n",
+            "Overall average age: 38.625\n",
+            "Number of people above the overall average age: 18\n"
+          ]
+        }
+      ]
     }
   ]
 }
